@@ -21,7 +21,7 @@ G_BEGIN_DECLS
 #define BONOBO_UI_SYNC_KEYS(obj)            (G_TYPE_CHECK_INSTANCE_CAST ((obj), BONOBO_TYPE_UI_SYNC_KEYS, BonoboUISyncKeys))
 #define BONOBO_UI_SYNC_KEYS_CLASS(klass)    (G_TYPE_CHECK_CLASS_CAST ((klass), BONOBO_TYPE_UI_SYNC_KEYS, BonoboUISyncKeysClass))
 #define BONOBO_IS_UI_SYNC_KEYS(obj)         (G_TYPE_CHECK_INSTANCE_TYPE ((obj), BONOBO_TYPE_UI_SYNC_KEYS))
-#define BONOBO_IS_UI_SYNC_KEYS_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE ((obj), BONOBO_TYPE_UI_SYNC_KEYS))
+#define BONOBO_IS_UI_SYNC_KEYS_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE ((klass), BONOBO_TYPE_UI_SYNC_KEYS))
 
 typedef struct _BonoboUISyncKeysPrivate BonoboUISyncKeysPrivate;
 
